(PC-35517)[PRO] fix: reset button alignement in reimbursment

--- a/pro/src/pages/Reimbursements/ReimbursementsInvoices/InvoicesFilters.module.scss
+++ b/pro/src/pages/Reimbursements/ReimbursementsInvoices/InvoicesFilters.module.scss
@@ -56,6 +56,7 @@
   }
 
   .reset-filters {
-    margin-top: 0;
+    margin-left: rem.torem(8px);
+    margin-top: rem.torem(12px);
   }
 }
